Possible ipad body scroll overflow fix

--- a/static/src/input.css
+++ b/static/src/input.css
@@ -18,6 +18,7 @@
 
         body {
                 position: relative;
+                overflow-y: clip;
         }
 
         .site-bg {
